--- a/env.sample
+++ b/env.sample
@@ -1,5 +1,5 @@
-API_ID=
-API_HASH=
-TELEGRAM_PHONE_NUMBER=
-TELEGRAM_USERNAME=
-TELEGRAM_PASSWORD=
+API_ID=9634596
+API_HASH=cd4a778e0606ca5b7d0b7916ff724913
+TELEGRAM_PHONE_NUMBER=+6288292003248
+TELEGRAM_USERNAME=chya04
+TELEGRAM_PASSWORD=nurchyahikarilight
